--- a/task-2/css/style.css
+++ b/task-2/css/style.css
@@ -1,6 +1,9 @@
 body {
     margin: 0 auto;
 }
+div {
+    width : auto;
+}
 #navabar {
     width: auto;
     height: 80px;
@@ -36,7 +39,7 @@ body {
     display: block;
     flex-direction: column;
     align-items: center;
-    margin: 0px 0px 13px 18px;
+    margin: 0px 0px 15px 18px;
     justify-content: center;
 }
 .menu a:active {
@@ -64,7 +67,7 @@ body {
     background-color: cyan;
 }
 .box, .circle, .chart{
-    width: calc(100% / 4);
+    width: calc(100vw / 4);
     height: 200px;
     margin-right: 10px;
     /* text-align: center; */
@@ -87,7 +90,6 @@ body {
 }
 .circle purple-bg {
     background-color: #9B4EFF;
-    border-radius: 50%;
 }
 .circle cyan-bg {
     background-color: cyan;
@@ -97,9 +99,10 @@ body {
 }
 .circle {
     width: calc((100vw - 200px) / 4);
-    border-radius: 60%;
+    border-radius: 50%;
+    height: 260px;
 }
-.inner-one {
+.inner-one, .inner-two,.inner-three,.inner-four {
     width: 70%;
     height: 70%;
     border-radius: 50%;
@@ -112,10 +115,6 @@ body {
     width: 90%;
     height: 90%;
     border-radius: 50%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
     background-color: #fff;
 }
 .inner-two h3 {
@@ -125,20 +124,12 @@ body {
      width: 90%;
     height: 90%;
     border-radius: 50%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
     background-color: #ff7262;
 }
 .inner-four {
      width: 50%;
     height: 50%;
     border-radius: 50%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
 }
 .bar {
     width: 10px;
@@ -178,8 +169,98 @@ body {
     bottom: 0;
 }
 .line {
-    width: 100%;
-    height: 10px;
+    width: 290px;
+    height: 8px;
     background-color: #555;
     position: absolute;
+}
+
+@media only screen and (max-width: 767px) {
+   .one {
+    left: 0;
+    height: calc(100% - 15px);
+}
+.two {
+    left: 25px;
+    height: calc(100% - 30px);
+}
+.three {
+    left: 50px;
+    height: calc(100% - 70px);
+}
+.four {
+    left: 75px;
+    height: calc(100% - 60px);
+}
+.five {
+    left: 100px;
+    height: calc(100% - 50px);
+}
+.six {
+    left: 125px;
+    height: calc(100% - 30px);
+}
+.chart div {
+    bottom: 0;
+}
+.line {
+    width: 165px;
+    height: 8px;
+    background-color: #555;
+    position: absolute;
+}
+#sidebar {
+    height: 100vh;
+}
+.box {
+    text-align: center;
+}
+.circle {
+    overflow: hidden;
+    border-radius: 50%;
+    height: 140px;
+   margin-top: 60px;
+}
+}
+
+@media only screen and (max-width: 1400px) and (min-width: 768px) {
+      .one {
+    left: 0;
+    height: calc(100% - 15px);
+}
+.two {
+    left: 30px;
+    height: calc(100% - 30px);
+}
+.three {
+    left: 60px;
+    height: calc(100% - 70px);
+}
+.four {
+    left: 90px;
+    height: calc(100% - 60px);
+}
+.five {
+    left: 120px;
+    height: calc(100% - 50px);
+}
+.six {
+    left: 150px;
+    height: calc(100% - 30px);
+}
+.chart div {
+    bottom: 0;
+}
+.line {
+    width: 190px;
+    height: 8px;
+    background-color: #555;
+    position: absolute;
+}
+#sidebar {
+    height: 100vh;
+}
+.circle {
+    height: 200px;
+}
 }
